<resources>
    <string name="app_name">StrengthLog</string>
    <string name="lift_activity_title">Your Lifts</string>
    <string name="title_activity_entry_list">%s</string>
    <string name="lift_entries_title">%s</string>
    <string name="lift_dialog_submit">OK</string>
    <string name="lift_dialog_cancel">Cancel</string>
    <string name="lift_input_dialog_message">Enter a name for you new lift to track</string>
    <string name="lift_input_dialog_title">New Lift</string>
    <string name="lift_input_box">lift name</string>
    <string name="title_activity_entry">%s</string>
    <string name="entry_rpe_label">RPE</string>
    <string name="entry_reps_label">Reps</string>
    <string name="entry_weight_label">Weight</string>
    <string name="lift_label">%s</string>
    <string name="date_label">%s</string>
    <string name="entry_input_desc">Enter reps and weight for this set</string>
    <string name="entry_input_title">New set</string>
    <string name="weight_editor_title">Edit Weight</string>
    <string name="weight_editor_desc">Enter a new weight for this set</string>
    <string name="rpe_editor_text_label">RPE (Rate of Perceived Exertion)</string>
    <string name="rpe_editor_title">RPE (Rate of Perceived Exertion)</string>
    <string name="rpe_editor_desc">Enter your RPE for this set</string>

    <string name="reps_editor_title">Edit Reps</string>
    <string name="reps_editor_desc">Enter different reps for this set</string>
    <string name="edit_menu_text">Edit</string>
    <string name="delete_menu_text">Delete</string>
    <string name="view_menu_text">View</string>
    <string name="delete_dialog_title">Delete %s</string>
    <string name="delete_dialog_desc">Are you sure you want to delete this %s</string>
    <string name="placeholder">%s</string>
    <string name="edit_lift_title">Edit Lift</string>
    <string name="edit_date_title">Edit Date</string>
    <string name="backup_menu_text">Backup</string>
    <string name="entry_string_format">New Set/Sets</string>
    <string name="entry_format_hint">[weight]x[reps*]x[sets*]@[rpe]</string>
    <string name="rpe_description">RPE - Rate of Percieved Exertion: A subjective rating of the difficulty of a set.</string>
</resources>
