<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmelthratter.strengthlog.ui.activities.EntryActivity"
    android:background="@color/colorBackground"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.design.widget.AppBarLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarLayout"
        app:layout_constraintRight_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/entry_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:srcCompat="@android:drawable/ic_input_add"
        android:layout_marginEnd="14dp"
        android:tint="@android:color/white"
        android:backgroundTint="@android:color/holo_green_light"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/weight_listView"
        app:layout_constraintRight_toRightOf="@+id/weight_listView" />

    <include
        android:id="@+id/include"
        layout="@layout/content_entry"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintRight_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/set_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry_set_label"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/sets_listView"
        app:layout_constraintRight_toRightOf="@+id/sets_listView"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/sets_listView" />

    <TextView
        android:id="@+id/reps_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry_reps_label"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/reps_listView"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="6dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/weight_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry_weight_label"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/weight_listView"
        app:layout_constraintRight_toRightOf="@+id/weight_listView"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="4dp"
        app:layout_constraintLeft_toLeftOf="@+id/weight_listView" />

    <TextView
        android:id="@+id/lift_text_label"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:text="@string/lift_label"
        android:textSize="18pt"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/reps_textView"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/date_textView"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="29dp" />

    <TextView
        android:id="@+id/date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14pt"

        android:text="@string/date_label"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/sets_listView"
        android:layout_width="0dp"
        android:layout_height="378dp"

        android:layout_marginBottom="16dp"
        android:layout_marginEnd="6dp"
        android:background="@color/colorPrimaryDark"
        android:textAlignment="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/reps_listView"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ListView
        android:id="@+id/reps_listView"
        android:layout_width="124dp"
        android:layout_height="378dp"

        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <ListView
        android:id="@+id/weight_listView"
        android:layout_width="0dp"
        android:layout_height="378dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="4dp"
        android:background="@color/colorPrimaryDark"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/reps_listView" />


</android.support.constraint.ConstraintLayout>
